@@ -9,3 +9,7 @@ mods and additions for pqR.
 Slight update to configure.ac form 2.15.1.
 
 Now uses the share/texmf/tex/latex/jss.cls file from 3.1.1.
+
+Now uses m4/java.m4 from 2.15.3.
+
+Now uses m4/R.m4 from 2.15.3.  Supposedly fixes Objective C/C++ problem for Mac.
